...
    private var imageClock: UIImageView = UIImageView()
    
    private var scrollStart: Bool = false
    private let animationDuration: CGFloat = 0.3
    private var gradientTransformRatio: CGFloat = 5.3
    
    private var starButton: StarButton = StarButton()
    private var stored: Bool
    
    private var directionButton: UIButton = UIButton()
    private let heightDirectionButton: CGFloat = 40
    
    init(hit: Recipes.hits, positionContainer: CGRect, offset: CGFloat, stored: Bool) {
        self.stored = stored
        self.offsetImage = offset
        self.recipe = hit.recipe
...
        containerInformationView.addSubview(labelInformationRating)
        containerInformationView.addSubview(labelInformationDuration)
        
        starButton = StarButton( primaryAction: UIAction { [self] _ in self.clicStarButton() })
        starButton.accessibilityIdentifier = "starButton"

        scrollView.accessibilityIdentifier = "scroll"
        scrollView.addSubview(containerImageView)
        scrollView.addSubview(labelRecipe)
        scrollView.addSubview(containerInformationView)
        scrollView.addSubview(starButton)

        labelRecipe.text = recipe.label
...
