...
        textField.layer.cornerRadius = 8
        textField.layer.borderWidth = 2
        textField.layer.borderColor = UIColor.darkGray.cgColor
        textField.textColor = .darkGray
        textField.textAlignment = .center
        textField.delegate = self
        textField.accessibilityIdentifier = "ingredient"
        textField.attributedPlaceholder = NSAttributedString(
            string: "Chicken or egg or salad ...",
            attributes: [NSAttributedString.Key.foregroundColor: UIColor.lightGray]
        )
        buttonAdd.accessibilityIdentifier = "addIngredient"
        buttonAdd.layer.cornerRadius = 8
        buttonAdd.layer.backgroundColor = UIColor.systemGreen.cgColor
        buttonAdd.setTitle("Add", for: .normal)
        self.addSubview(label)
        self.addSubview(textField)
        self.addSubview(buttonAdd)
...
