...
        listIngredient.view.layer.cornerRadius = 8
        listIngredient.view.layer.borderWidth = 2
        listIngredient.view.layer.borderColor = UIColor.darkGray.cgColor
        buttonClear.layer.cornerRadius = 8
        buttonClear.layer.backgroundColor = UIColor.systemRed.cgColor
        buttonClear.setTitle("Clear", for: .normal)
        buttonClear.accessibilityIdentifier = "clear"
        buttonSearch.layer.cornerRadius = 8
        buttonSearch.layer.backgroundColor = UIColor.systemGreen.cgColor
        buttonSearch.setTitle("Search for recipes", for: .normal)
        buttonSearch.accessibilityIdentifier = "search"
        activityLoad.style = .medium
        buttonSearch.addSubview(activityLoad)
        self.addSubview(label)
        self.addSubview(listIngredient.view)
        self.addSubview(buttonClear)
        self.addSubview(buttonSearch)
...
