...
        self.view.backgroundColor = .white
        self.tableView.backgroundColor = .white
        self.tableView.separatorColor = .clear
        if stored {
            let icon = UITabBarItem(tabBarSystemItem: .favorites, tag: 0)
            self.tabBarItem = icon
            self.title = "Favorites"
        } else {
            self.title = "Search"
        }
    }    
    required init?(coder: NSCoder) {
        self.stored = false
        self.recipes = Recipes(from: 0, to: 0, count: 0, _links: Recipes._links(next: Recipes._links.next(href: "")), hits: [])
        self.hitToPushDetail = Recipes.hits.init(recipe: Recipes.hits.recipe(url:"", label: "", image: "", totalTime: 0, yield: 0, ingredientLines: []))
...
